# CELLA_AI_2.0

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
backend/routes/: chat.py  upload.py
backend/service/: utils.py
frontend-new/: index.html  package-lock.json  package.json  tailwind.config.js
frontend-new/src/: App.jsx  index.css
frontend-new/src/components/: ChatMessages.jsx  FileUploader.jsx
