[project]
name = "cuba-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-huggingface>=1.2.0",
    "langchain-pinecone>=0.2.13",
    "openpyxl>=3.1.5",
    "unstructured[all-docs]>=0.18.31",]
    [tool.setuptools]
    packages = ["backend", "frontend"]
